# cfpb-complaint-triage

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
cfpb_complaint_triage/: __init__.py  commands.py
cfpb_complaint_triage/data/: __init__.py  download.py  dvc_utils.py  io.py  preprocess.py  schema.py
cfpb_complaint_triage/production/: __init__.py  api.py  export_onnx.py  infer_onnx.py  mlflow_pyfunc.py  serving_instructions.py  trt_export.sh
cfpb_complaint_triage/training/: baseline.py  datamodule.py  metrics.py  model.py  train.py
cfpb_complaint_triage/utils/: git.py  logging.py  paths.py  seeding.py
configs/: config.yaml  data.yaml  export.yaml  infer.yaml  logging.yaml  preprocess.yaml  train.yaml
configs/model/: distilbert.yaml
lightning_logs/version_0/: hparams.yaml  metrics.csv
scripts/: self_check.sh
